--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <h1>Generate Activity Ideas</h1>
-        <img src="src/ladybug.png" alt="cute-ladybug" id="ladybug">
+        <img src="src/people (1).png" alt="cute-ladybug" id="ladybug">
         
         <form>
           <div class="checkbox-group">
