--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <div class="container">
         <h1>Generate Activity Ideas</h1>
-        <img src="src/people (1).png" alt="cute-ladybug" id="ladybug">
-        
+        <img src="src/people (1).png" alt="chilling" id="chiling">
+
         <form>
           <div class="checkbox-group">
             <input type="checkbox" id="indoorCheckbox">
