--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holiday Random Ideas for Kids</title>
+    <title>Random Activity Ideas for Kids</title>
     <link rel="stylesheet" href="index.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="src/apple-touch-icon.png">
